--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,36 +19,58 @@
 }
 
 body::-webkit-scrollbar {
-	width: 9px;
+  width: 9px;
 }
-   
+
 body::-webkit-scrollbar-thumb {
-	@apply rounded-full bg-gray-400;
+  @apply rounded-full bg-gray-400;
 }
 
 body::-webkit-scrollbar-thumb:hover {
-	@apply bg-gray-600;
+  @apply bg-gray-600;
 }
 
 /* Buttons */
 ::-webkit-scrollbar-button:single-button {
-    display: block;
-    background-size: 10px;
-    background-repeat: no-repeat;
+  display: block;
+  background-size: 10px;
+  background-repeat: no-repeat;
 }
 
 /* Up */
 ::-webkit-scrollbar-button:single-button:vertical:decrement {
-    height: 12px;
-    width: 16px;
-    background-position: center 3px;
-    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='rgb(96, 96, 96)'><polygon points='50,00 0,50 100,50'/></svg>");
+  height: 12px;
+  width: 16px;
+  background-position: center 3px;
+  background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='rgb(96, 96, 96)'><polygon points='50,00 0,50 100,50'/></svg>");
 }
 
 /* Down */
 ::-webkit-scrollbar-button:single-button:vertical:increment {
-    height: 16px;
-    width: 16px;
-    background-position: center 7px;
-    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='rgb(96, 96, 96)'><polygon points='0,0 100,0 50,50'/></svg>");
+  height: 16px;
+  width: 16px;
+  background-position: center 7px;
+  background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='rgb(96, 96, 96)'><polygon points='0,0 100,0 50,50'/></svg>");
+}
+
+/* Separator */
+.separator {
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+
+.separator::before,
+.separator::after {
+  content: "";
+  flex: 1;
+  @apply border-b border-gray-400;
+}
+
+.separator:not(:empty)::before {
+  margin-right: 1.75em;
+}
+
+.separator:not(:empty)::after {
+  margin-left: 1.75em;
 }
