--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,3 +74,19 @@ body::-webkit-scrollbar-thumb:hover {
 .separator:not(:empty)::after {
   margin-left: 1.75em;
 }
+
+.blue-disc > li::marker {
+	@apply text-blue-600
+}
+
+
+input.custom_radio {
+	@apply appearance-none size-4 text-blue-600 rounded-full cursor-pointer;
+	border: 0.05rem solid currentColor;
+}
+
+input.custom_radio:checked {
+	background-color: transparent;
+	box-shadow: inset 0 0 0 3px;
+	border-width: 0;
+}
