--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,16 +18,22 @@
   @apply text-lg font-medium tracking-tight mt-6 mb-2;
 }
 
+.extra-thin-scrollbar::-webkit-scrollbar {
+	width: 5px;
+}
+
 .thin-scrollbar::-webkit-scrollbar {
-  width: 9px;
+	width: 9px;
 }
 
+.extra-thin-scrollbar::-webkit-scrollbar-thumb,
 .thin-scrollbar::-webkit-scrollbar-thumb {
-  @apply rounded-full bg-gray-400;
+  @apply rounded-full bg-gray-300 dark:bg-gray-700;
 }
 
+.extra-thin-scrollbar::-webkit-scrollbar-thumb:hover,
 .thin-scrollbar::-webkit-scrollbar-thumb:hover {
-  @apply bg-gray-600;
+  @apply bg-gray-400 dark:bg-gray-600;
 }
 
 /* Buttons */
